test: refactor path testcode